config/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: biergit-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - dev.biergit.ch
      secretName: biergit-host-secret
  rules:
    - host: dev.biergit.ch
      http:
        paths:
          - path: /
            backend:
              serviceName: biergit-frontend-service
              servicePort: 80
